syntax = "proto3";
package metashell.daemon;

option go_package = "github.com/raphaelreyna/metashell/rpc/daemon";

message Empty {}

service ShellclientDaemon {
    rpc PreRunQuery(PreRunQueryRequest) returns (PreRunQueryResponse);
    rpc PostRunReport(PostRunReportRequest) returns (Empty);
}

message PreRunReportResponse {
    string cmd_key = 1;
}

message PreRunQueryRequest {
    string command = 1;
    string tty = 2;
    int64 timestamp = 3;
}

message PreRunQueryResponse {
    string uuid = 1;
}

message PostRunReportRequest {
    string uuid = 1;
    int32 exit_code = 2;
}

service MetashellDaemon {
    rpc NewExitCodeStream(Empty) returns (stream CommandExitCode);
    rpc RegisterCommandEntry(CommandEntry) returns (CommandKey);
    rpc Metacommand(MetacommandRequest) returns (MetacommandResponse);
    rpc GetPluginInfo(GetPluginInfoRequest) returns (GetPluginInfoResponse);
}

message CommandEntry {
    string command = 1;
    string tty = 2;
    int64 timestamp = 3;
}

message CommandKey {
    string key = 1;
}

message CommandExitCode {
    string key = 1;
    int32 exit_code = 2;
}

message GetPluginInfoRequest {
    string plugin_name = 1;
    string metacommand_name = 2;
    bool metacommand_plugins_only = 3;
}

message GetPluginInfoResponse {
    repeated PluginInfo plugins = 1;
}

message PluginInfo {
    string name = 1;
    string version  = 2;
    bool accepts_command_reports = 3;
    repeated MetacommandInfo metacommands = 4;
}

message MetacommandInfo {
    string name = 1;
    MetacommandResponseFormat format = 3;
}

message MetacommandRequest {
    string plugin_name = 1;
    string meta_command = 2;
    repeated string args = 3;
    repeated string format_args = 4;
    string tty = 5;
}

message MetacommandResponse {
    bytes data = 1;
    string error = 2;
}

enum MetacommandResponseFormat {
    UNSPECIFIED = 0;
    TEXT = 1; // string
    ITEM_LIST = 2; // [{"title": string, "description": string, "filter_value": string}]
    SCREEN = 3; // string
    SHELL_INJECTION = 4; // string
    SHELL_INJECTION_LIST = 5; // [{"title": string, "description": string, "filter_value": string, "shell_injection": ""}]
}